Add docker daily build task for esr-gui.
Remove stage-site build task, it is not in used for esr-gui.
Add docker build task for esr-gui.

Change-Id: I4df33a0df733cbca1940067adfd1ac97ddd57739
Issue-ID: AAI-188
Signed-off-by: lizi00164331 <li.zi30@zte.com.cn>

--- a/jjb/aai/aai-esr-gui.yaml
+++ b/jjb/aai/aai-esr-gui.yaml
@@ -7,9 +7,7 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
-      - '{project-name}-{stream}-stage-site-java':
-          site-pom: 'pom.xml'
-          trigger-job: '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-docker-java-daily'
 
     project: 'aai/esr-gui'
     stream:
@@ -18,4 +16,6 @@
     mvn-settings: 'aai-esr-gui-settings'
     files: '**'
     archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
     build-node: ubuntu1604-basebuild-4c-4g
