Exclude nfvparser from Sonar scans
Use no-sonar template for daily releases for nfvparser.
nfvparser is python project.

Change-Id: I6ea064ff403ecc45a136329cdf00ed3bfa4c3e2e
Issue-ID: MODELING-19
Signed-off-by: Zhaoxing <meng.zhaoxing1@zte.com.cn>

--- a/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
+++ b/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
@@ -16,7 +16,6 @@
           pom: 'nfvparser/pom.xml'
     jobs:
       - '{project-name}-{stream}-clm'
-      - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
-      - '{project-name}-{stream}-{subproject}-release-java-daily'
+      - '{project-name}-{stream}-{subproject}-release-version-java-daily-no-sonar'
