--- a/jjb/vfc/vfc-nfvo-lcm-java.yaml
+++ b/jjb/vfc/vfc-nfvo-lcm-java.yaml
@@ -11,6 +11,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
       - '{project-name}-{stream}-docker-java-version-shell-daily':
           docker-pom: 'pom.xml'
           mvn-goals: 'install'
