Update vfc-nfvo-catalog yaml template
Add vfc-catalog release-version-java-daily-no-sonar jenkins job.

Change-Id: I705f44aeec0513749ee7e500d6741d0a073442cc
Issue-ID: CIMAN-77
Signed-off-by: ying.yunlong <ying.yunlong@zte.com.cn>

--- a/jjb/vfc/vfc-nfvo-catalog.yaml
+++ b/jjb/vfc/vfc-nfvo-catalog.yaml
@@ -16,6 +16,7 @@
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
       - '{project-name}-{stream}-docker-java-version-shell-daily':
           docker-pom: 'pom.xml'
           mvn-goals: 'install'
