--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -20,6 +20,8 @@
           branch: 'master'
       - 'release-1.0.0':
           branch: 'release-1.0.0'
+      - 'release-1.1.0':
+          branch: 'release-1.1.0'
     mvn-settings: 'sdc-settings'
     files: '**'
     archive-artifacts: ''
