Add Jenkins jobs for SDC
Add Jenkins jobs to the branch release-1.1.0
Add release java daily job to run sonar

Change-Id: If7635a10c75970e0ef5731d33b5b6e407834e2ce
Issue-ID: CIMAN-81
Signed-off-by: Michael Lando <ml636r@att.com>

--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -8,6 +8,7 @@
       - '{project-name}-{stream}-sdc-merge-java':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
+      - '{project-name}-{stream}-release-java-daily'
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker,docker-staging'
@@ -20,6 +21,8 @@
           branch: 'master'
       - 'release-1.0.0':
           branch: 'release-1.0.0'
+      - 'release-1.1.0':
+          branch: 'release-1.1.0'
     mvn-settings: 'sdc-settings'
     files: '**'
     archive-artifacts: ''
