--- a/jjb/usecaseui/usecase-ui-server.yaml
+++ b/jjb/usecaseui/usecase-ui-server.yaml
@@ -11,6 +11,7 @@
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-java-daily'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
