--- a/jjb/policy/policy-drools-pdp.yaml
+++ b/jjb/policy/policy-drools-pdp.yaml
@@ -18,6 +18,7 @@
     mvn-settings: 'policy-drools-pdp-settings'
     files: '**'
     archive-artifacts: ''
+    build-node: 'ubuntu1604-basebuild-4c-4g'
 - project:
     name: policy-drools-pdp-release-1.0.0
     project-name: 'policy-drools-pdp'
