Change TCA to APIs to reflect integration repo
Change-Id: If2097c7a386563c2abebcdd401833ad2d3c4f78d
Signed-off-by: eh552t <eh552t@intl.att.com>
Issue-ID: CLAMP-34

--- a/jjb/clamp/clamp-csit.yaml
+++ b/jjb/clamp/clamp-csit.yaml
@@ -7,7 +7,7 @@
     project-name: 'clamp'
     stream: 'master'
     functionality:
-      - 'TCA':
+      - 'APIs':
           trigger_jobs:
             - '{project-name}-{stream}-release-java-daily-checkstyle'
       - 'UIs':
