Add step for version to release-checkstyle
Adding an optional step to use maven version plugin

Change-Id: Ia174dc86fff30bd814fc4a083eda08e75bfa5378
Issue-ID: CLAMP-57
Signed-off-by: JulienBe <jb379x@att.com>

--- a/jjb/clamp/clamp.yaml
+++ b/jjb/clamp/clamp.yaml
@@ -10,6 +10,7 @@
             - docker.pull.registry=nexus3.onap.org:10001
             - docker.push.registry=nexus3.onap.org:10003
       - '{project-name}-{stream}-release-java-daily-checkstyle':
+         setVersion: 'DoSetVersion'
          mvn_properties:
           - skipDockerBuild=true
           - skipDockerTag=true
