--- a/jjb/aaf/aaf-authz-docker.yaml
+++ b/jjb/aaf/aaf-authz-docker.yaml
@@ -11,6 +11,7 @@
             - docker.pull.registry=nexus3.onap.org:10001
             - docker.push.registry=nexus3.onap.org:10003
       - '{project-name}-{stream}-release-java-daily-checkstyle':
+         setVersion: 'DontSetVersion'
          mvn_properties:
           - skipDockerBuild=true
           - skipDockerTag=true
