Modify jenkins template for aaf cadi & Inno
jenkins template for aaf-cadi & inno modified and site-pom
value chnaged to parent pom. Earlier it is throwing non-readable pom
file.

Issue-id: AAF-75
Change-Id: I6d88f58a6e8327cfc011478801b28ac156972def
Signed-off-by: sg481n <sg481n@att.com>

--- a/jjb/aaf/aaf-inno.yaml
+++ b/jjb/aaf/aaf-inno.yaml
@@ -8,7 +8,7 @@
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-stage-site-java':
-          site-pom: 'aaf/inno/pom.xml'
+          site-pom: 'pom.xml'
           trigger-job: '{project-name}-{stream}-release-version-java-daily'
           mvn-goals: 'clean install'
     project: 'aaf/inno'
