--- a/jjb/multicloud/multicloud-openstack-vmware-java.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-java.yaml
@@ -14,6 +14,7 @@
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-stage-site-java':
           site-pom: 'pom.xml'
           trigger-job: '{project-name}-{stream}-release-version-java-daily'
