Modify trigger_jobs of usecase-ui-server-csit
Change-Id: I90992ab4233c81164f5c1794d7c5dd13e3c22223
Issue-Id: USECASEUI-45
Signed-off-by: shentao <shentao@chinamobile.com>

--- a/jjb/usecaseui/usecase-ui-server-csit.yaml
+++ b/jjb/usecaseui/usecase-ui-server-csit.yaml
@@ -8,6 +8,6 @@
     functionality:
       - 'testsuite':
           trigger_jobs:
-            - 'usecase-ui-server-{stream}-version-docker-java-daily'
+            - '{project-name}-{stream}-docker-java-daily'
     robot-options: ''
     branch: 'master'
