--- a/jjb/usecaseui/usecase-ui.yaml
+++ b/jjb/usecaseui/usecase-ui.yaml
@@ -12,6 +12,9 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-java-daily'
+      - '{project-name}-{stream}-docker-java-daily'
     files: '**'
     archive-artifacts: ''
+    docker-pom: 'pom.xml'
+    mvn-profile: docker
     build-node: ubuntu1604-basebuild-4c-4g
