Change Jenkins jobs for SDC
Change Jenkins jobs for SDC repo from
release-java-daily to release-version-java-daily

Change-Id: I0ac936b32244776f0d9fa3b802e869deebae58f9
Issue-Id: CIMAN-88
Signed-off-by: Michael Lando <ml636r@att.com>

--- a/jjb/sdc/sdc.yaml
+++ b/jjb/sdc/sdc.yaml
@@ -8,7 +8,7 @@
       - '{project-name}-{stream}-sdc-merge-java':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
-      - '{project-name}-{stream}-release-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker,docker-staging'
