Add jjb jobs for vesagent
Add verify, merge and docker create Jenkins jobs

Change-Id: I9444c94626e668e11f353e410304667a242f19c4
Issue-ID: MULTICLOUD-8
Signed-off-by: Arun Arora <aroraarun@vmware.com>

--- a/jjb/multicloud/multicloud-openstack-vmware-python.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-python.yaml
@@ -12,5 +12,8 @@
       - 'vio':
           path: 'vio'
           pattern: 'vio/**'
+      - 'vesagent':
+          path: 'vesagent'
+          pattern: 'vesagent/**'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
