--- a/jjb/multicloud/multicloud-openstack-vmware-java.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-java.yaml
@@ -11,13 +11,13 @@
       - 'vio':
           pom: 'vio/pom.xml'
           pattern: 'vio/**'
+      - 'vesagent':
+          pom: 'vesagent/pom.xml'
+          pattern: 'vesagent/**'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
-      - '{project-name}-{stream}-stage-site-java':
-          site-pom: 'pom.xml'
-          trigger-job: '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-java-version-shell-daily':
           docker-pom: 'pom.xml'
           mvn-goals: 'install'
