vesagent Jenkins Jobs
Issue-Id: MULTICLOUD-8

Change-Id: I9444c94626e668e11f353e410304667a242f19c4
Signed-off-by: Arun Arora <aroraarun@vmware.com>

--- a/jjb/multicloud/multicloud-openstack-vmware-java.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-java.yaml
@@ -11,6 +11,9 @@
       - 'vio':
           pom: 'vio/pom.xml'
           pattern: 'vio/**'
+      - 'vesagent':
+          pom: 'vesagent/pom.xml'
+          pattern: 'vesagent/**'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
