Exclude modeling-nfvparser from Sonar scans
Use no-sonar template for daily releases for nfvparser.
nfvparser is python project.

Change-Id: Ibc9373343eb2b029bb6d0af2feec62cf9ca0c852
Issue-ID: MODELING-19
Signed-off-by: Zhaoxing <meng.zhaoxing1@zte.com.cn>

--- a/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
+++ b/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
@@ -19,4 +19,4 @@
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
-      - '{project-name}-{stream}-{subproject}-release-java-daily'
+      - '{project-name}-{stream}-{subproject}-release-version-java-daily-no-sonar'
