--- a/jjb/aai/aai-csit.yaml
+++ b/jjb/aai/aai-csit.yaml
@@ -12,5 +12,8 @@
       - 'resources':
           trigger_jobs:
             - 'aai-resources-{stream}-aai-docker-java-version-daily'
+      - 'sanity-check':
+          trigger_jobs:
+            - 'aai-esr-server-{stream}-docker-java-daily'
     robot-options: ''
     branch: 'master'
