Fix the way of trigger esr-server csit usecase.
Change-Id: Iee3e68a82961312e12f93143cce1abd51076adcb
Issue-ID: AAI-393
Signed-off-by: lizi <li.zi30@zte.com.cn>

--- a/jjb/aai/aai-csit.yaml
+++ b/jjb/aai/aai-csit.yaml
@@ -12,5 +12,8 @@
       - 'resources':
           trigger_jobs:
             - 'aai-resources-{stream}-aai-docker-java-version-daily'
+      - 'esr-server':
+          trigger_jobs:
+            - 'aai-esr-server-{stream}-docker-java-daily'
     robot-options: ''
     branch: 'master'
