Temporarily disable search-data-service tests
Change-Id: I5e4557b40dbc334b7b34626e07bc5c26ab6df74a
Issue-Id: AAI-308
Signed-off-by: Daniel Silverthorn <daniel.silverthorn@amdocs.com>

--- a/jjb/aai/aai-csit.yaml
+++ b/jjb/aai/aai-csit.yaml
@@ -7,8 +7,8 @@
     project-name: 'aai'
     stream: 'master'
     functionality:
-      - 'search-data-service':
-          trigger_jobs:
+      # - 'search-data-service':
+      #     trigger_jobs:
       - 'resources':
           trigger_jobs:
             - 'aai-resources-{stream}-aai-docker-java-version-daily'
