Fix the way of trigger esr-server csit usecase.
Change-Id: I54abd14b3df0d1f7c5ab84d53db3e46f74a10162
Issue-ID: AAI-393
Signed-off-by: lizi <li.zi30@zte.com.cn>

--- a/jjb/aai/aai-csit.yaml
+++ b/jjb/aai/aai-csit.yaml
@@ -13,5 +13,8 @@
       - 'traversal':
           trigger_jobs:
             - 'aai-traversal-{stream}-aai-docker-java-version-daily'
+      - 'esr-server':
+          trigger_jobs:
+            - 'aai-esr-server-{stream}-docker-java-daily'
     robot-options: ''
     branch: 'master'
