Disable Sonar on non-java ccsdk and sdnc repos
Disable Sonar on repos that contain non-Java code, or that are no
longer in active use due to refactoring from SDNC to CCSDK.

Change-Id: I5e8d84e385883edd040c37d456552dbb2f9ee6b4
Issue-ID: CIMAN-91
Signed-off-by: Dan Timoney <dtimoney@att.com>

--- a/jjb/sdnc/sdnc-core.yaml
+++ b/jjb/sdnc/sdnc-core.yaml
@@ -10,10 +10,10 @@
       - '{project-name}-{stream}-clm'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
-      - '{project-name}-{stream}-{subproject}-release-java-daily'
+      - '{project-name}-{stream}-{subproject}-release-java-daily-no-sonar'
       - '{project-name}-{stream}-verify-java-skip-tests'
       - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-release-version-java-daily-no-sonar'
 
     project: 'sdnc/core'
     stream:
