Add integration-tests to sonar for so
add new template for this purpose
Template allows to pass a maven profile

Change-Id: I984d836bd053065d3d10b726aaca9851c2132fe7
Issue-ID: SO-168
Signed-off-by: JulienBe <jb379x@att.com>

--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -12,7 +12,8 @@
           mvn-profile: 'with-integration-tests'
           build-node: 'ubuntu1604-docker-8c-8g'
           archive-artifacts: 'packages/arquillian-unit-tests/target/**/*'
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-release-version-profile-java-daily':
+          mvn-profile: 'with-integration-tests'
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
