--- a/jjb/portal/portal.yaml
+++ b/jjb/portal/portal.yaml
@@ -12,10 +12,11 @@
     stream:
       - 'master':
           branch: 'master'
-      - 'release-1.0.0':
-          branch: 'release-1.0.0'
-      - 'release-1.1.0':
-          branch: 'release-1.1.0'
+#      - 'release-1.0.0':
+#          branch: 'release-1.0.0'
+#      - 'release-1.1.0':
+#          branch: 'release-1.1.0'
+
     mvn-settings: 'portal-settings'
     files: '**'
     archive-artifacts: ''
