Specify correct build node for so release
Change-Id: I34be8c89bc677e7c11eceba90bd96e92f03615b6
Issue-ID: SO-168
Signed-off-by: JulienBe <jb379x@att.com>

--- a/jjb/so/so.yaml
+++ b/jjb/so/so.yaml
@@ -14,6 +14,7 @@
           archive-artifacts: 'packages/arquillian-unit-tests/target/**/*'
       - '{project-name}-{stream}-release-version-profile-java-daily':
           mvn-profile: 'with-integration-tests'
+          build-node: 'ubuntu1604-basebuild-8c-8g'
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
