Update test name in sdc csit jjb
Update test name from healthCheck to sanity

Change-Id: Ief64b52781b1e5004d74563d0b22aac9579504ca
Issue-Id:  SDC-424
Signed-off-by: Yuli Shlosberg <ys9693@att.com>

--- a/jjb/sdc/sdc-csit.yaml
+++ b/jjb/sdc/sdc-csit.yaml
@@ -7,7 +7,7 @@
     project-name: 'sdc'
     stream: 'master'
     functionality:
-      - 'healthCheck':
+      - 'sanity':
           trigger_jobs:
             - '{project-name}-{stream}-release-java-daily-checkstyle'
     robot-options: ''
