Add Docker job to VVP CMS
Add a job for Docker build and push
to VVP CMS

Change-Id: Ieb76a9bde9426ca086d08bb36584c029e4bb86df
Issue-Id: VVP-25
Signed-off-by: Areli Fuss <af732p@att.com>

--- a/jjb/vvp/vvp-cms.yaml
+++ b/jjb/vvp/vvp-cms.yaml
@@ -15,5 +15,6 @@
     build-node: ubuntu1604-basebuild-4c-4g
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
+      - '{project-name}-{stream}-docker-java-daily'
     docker-pom: 'pom.xml'
     mvn-profile: 'default'
