Spread schedule for release-version-java-daily
Let release-version-java-daily jobs run between 10am and 5pm PT
to minimize channel issues in the Jenkins instances.

Change-Id: I74036a2624ad6268213c8e58a1586820ec7f7080
Issue-ID: CIMAN-95
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -611,7 +611,7 @@
 
     triggers:
       # 11 AM UTC
-      - timed: 'H 11 * * *'
+      - timed: 'H H(10-17) * * *'
       - gerrit-trigger-release-manually:
           server: '{server-name}'
           project: '{project}'
@@ -688,7 +688,7 @@
 
     triggers:
       # 11 AM UTC
-      - timed: 'H 11 * * *'
+      - timed: 'H H(10-17) * * *'
       - gerrit-trigger-release-manually:
           server: '{server-name}'
           project: '{project}'
@@ -766,7 +766,7 @@
 
     triggers:
       # 11 AM UTC
-      - timed: 'H 11 * * *'
+      - timed: 'H H(10-17) * * *'
       - gerrit-trigger-release-manually:
           server: '{server-name}'
           project: '{project}'
