Add {pom} variable for stage-site-java jobs
For versions:set step, if there is no pom.xml the job will
assume a root pom.xml.
This is not always valid like the case of portal/sdk.
Need to add the pom variable so that the job picks up the defined
pom.xml

Change-Id: Icafcb51fc22e8de819701968b3846278f4299e44
Issue-ID: CIMAN-97
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -1975,6 +1975,7 @@
     name: '{project-name}-{stream}-stage-site-java'
     project-type: freestyle
     node: '{build-node}'
+    pom: 'pom.xml'
 
     properties:
       - infra-properties:
@@ -2011,6 +2012,7 @@
           properties-file: version.properties
       - maven-target:
           maven-version: '{maven-version}'
+          pom: '{pom}'
           goals: 'versions:set versions:update-child-modules versions:commit -B'
           properties:
             - 'newVersion=${{release_version}}'
