--- a/jjb/portal/portal-sdk.yaml
+++ b/jjb/portal/portal-sdk.yaml
@@ -12,6 +12,7 @@
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-java-daily'
       - '{project-name}-{stream}-stage-site-java':
+          pom: 'ecomp-sdk/pom.xml'
           site-pom: 'ecomp-sdk/pom.xml'
           trigger-job: '{project-name}-{stream}-{subproject}-release-java-daily'
 
