Fix project to trigger for portal/sdk
Global jjb does not support too many levels of variables for
which we were getting an erroneus tirgger project translated.
Adding a separate variable for this purpose for now.

Change-Id: I56a92bb7da89256962fc2a63989b8f4bf4a1ba54
Issue-ID: CIMAN-97
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/portal/portal-sdk.yaml
+++ b/jjb/portal/portal-sdk.yaml
@@ -6,6 +6,7 @@
       - 'ecomp-sdk':
           pom: 'ecomp-sdk/pom.xml'
           pattern: 'ecomp-sdk/**'
+    subproject-name: 'ecomp-sdk'
 
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
@@ -14,7 +15,7 @@
       - '{project-name}-{stream}-stage-site-java':
           pom: 'ecomp-sdk/pom.xml'
           site-pom: 'ecomp-sdk/pom.xml'
-          trigger-job: '{project-name}-{stream}-{subproject}-release-java-daily'
+          trigger-job: '{project-name}-{stream}-{subproject-name}-release-java-daily'
 
     project: 'portal/sdk'
     stream:
