Fix dmaap csit jobs
Added projectname as variable in csit yaml file

Issue-Id: DMAAP-144
Change-Id: If58be88e54b09398a01b49951939e1a5413a9f88
Signed-off-by: Varun Gudisena <vg411h@att.com>

--- a/jjb/dmaap/dmaap-csit.yaml
+++ b/jjb/dmaap/dmaap-csit.yaml
@@ -9,6 +9,6 @@
     functionality:
       - 'mrpubsub':
           trigger_jobs:
-            - 'dmaap-messagerouter-messageservice-{stream}-merge-java'
+            - '{project-name}-{stream}-merge-java'
     robot-options: ''
     branch: 'master'
