--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -1961,6 +1961,91 @@
           maven-version: '{maven-version}'
 
 - job-template:
+    # Job template for Java daily release jobs
+    #
+    # The purpose of this job template is to run
+    #   - change version in all POM files to the release version specified
+    #     in version.properties. This is done using a script instread of
+    #     the mvn version plugin that assumes some specific parent structure
+    #     This version does NOT change the version within the <parent> tag.
+    #   - runs maven clean deploy sonar
+    #
+    # The POM files are required to use the Maven staging plugin so the deploy
+    # does not deploy directly to the release repo.
+    #
+    # Required Variables:
+    #     branch:    git branch (eg. stable/lithium or master)
+    #     pom:       name/location of the pom.xml file relative to the workspace
+    #     pattern:   ant file-path pattern relative to the workspace used to
+    #                trigger the job
+
+    name: '{project-name}-{stream}-{subproject}-release-version3-java-daily'
+
+    project-type: freestyle
+    node: '{build-node}'
+    maven-deploy-properties:
+    properties:
+      - infra-properties:
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - infra-parameters:
+          project: '{project}'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - maven-exec:
+          maven-version: '{maven-version}'
+
+    scm:
+      - gerrit-trigger-scm:
+          refspec: ''
+          choosing-strategy: 'default'
+          submodule-recursive: '{submodule-recursive}'
+
+    wrappers:
+      - infra-wrappers:
+          build-timeout: '{build-timeout}'
+
+    triggers:
+      # 11 AM UTC
+      - timed: 'H 11 * * *'
+      - gerrit-trigger-release-manually:
+          server: '{server-name}'
+          project: '{project}'
+          branch: '{branch}'
+          files: '{pattern}'
+
+    builders:
+      - provide-maven-settings:
+          global-settings-file: 'global-settings'
+          settings-file: '{mvn-settings}'
+      - maven-install:
+          maven-version: '{maven-version}'
+
+      - inject:
+          properties-file: version.properties
+
+      - shell: !include-raw-escape: include-update-pom-versions-not-parent.sh
+
+      - maven-target:
+          maven-version: '{maven-version}'
+          pom: '{pom}'
+          goals: 'clean deploy sonar:sonar site:site site:stage-deploy
+            -Dsonar.host.url=${{SONAR}} -B
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
+          properties:
+            - '{maven-deploy-properties}'
+          settings: '{mvn-settings}'
+          settings-type: cfp
+          global-settings: 'global-settings'
+          global-settings-type: cfp
+
+    publishers:
+      - infra-shiplogs:
+          maven-version: '{maven-version}'
+
+- job-template:
     # Template for maven site plugin invocation
     #
     # It's designed to be triggered when the trigger-job job
