--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-zte-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-zte-java.yaml
@@ -15,6 +15,7 @@
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
+      - '{project-name}-{stream}-{subproject}-release-version-java-daily-no-sonar'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
