Increase memory size for stage-site job
The build jobs for stage-site have been failing due to lack of heap space.

Issue-ID: POLICY-297
Change-Id: I852bb7edddfacd8c84174ecc8d9d86866463ed63
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-drools-applications.yaml
+++ b/jjb/policy/policy-drools-applications.yaml
@@ -18,6 +18,7 @@
     mvn-settings: 'policy-drools-applications-settings'
     files: '**'
     archive-artifacts: ''
+    build-node: 'ubuntu1604-basebuild-4c-4g'
 - project:
     name: policy-drools-applications-release-1.0.0
     project-name: 'policy-drools-applications'
