--- a/jjb/msb/msb-java-sdk.yaml
+++ b/jjb/msb/msb-java-sdk.yaml
@@ -6,6 +6,7 @@
       - '{project-name}-{stream}-clm'
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily'
     project: 'msb/java-sdk'
     stream:
       - 'master':
