--- a/jjb/vfc/vfc-nfvo-driver-sfc.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-sfc.yaml
@@ -14,7 +14,7 @@
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
-      - '{project-name}-{stream}-{subproject}-release-java-daily'
+      - '{project-name}-{stream}-{subproject}-release-version2-java-daily'
       - '{project-name}-{stream}-docker-java-version-shell-daily':
           docker-pom: 'pom.xml'
           mvn-goals: 'install'
