--- a/jjb/multicloud/multicloud-openstack-vmware-vesagent-java.yaml
+++ b/jjb/multicloud/multicloud-openstack-vmware-vesagent-java.yaml
@@ -1,16 +1,16 @@
 ---
 - project:
-    name: multicloud-openstack-vmware-java
-    project-name: 'multicloud-openstack-vmware'
+    name: multicloud-openstack-vmware-vesagent-java
+    project-name: 'multicloud-openstack-vmware-vesagent'
     project: 'multicloud/openstack/vmware'
     stream:
       - 'master':
           branch: 'master'
     mvn-settings: 'multicloud-openstack-vmware-settings'
     subproject:
-      - 'vio':
-          pom: 'vio/pom.xml'
-          pattern: 'vio/**'
+      - 'vesagent':
+          pom: 'vesagent/pom.xml'
+          pattern: 'vesagent/**'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
@@ -19,7 +19,7 @@
           docker-pom: 'pom.xml'
           mvn-goals: 'install'
           script:
-            !include-raw-escape: 'build-multicloud-openstack-vmware-docker-image.sh'
+            !include-raw-escape: 'build-multicloud-openstack-vmware-vesagent-docker-image.sh'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
