Modify dmaap csit template file
Modify dmaap csit template file and change trigger job to release
java daily. Merge daily job is not relevant to csit.

Issue-ID: DMAAP-161
Change-Id: I9feeabbd217bc9f24904fba3d589f985b7f8736c
Signed-off-by: sg481n <sg481n@att.com>

--- a/jjb/dmaap/dmaap-csit.yaml
+++ b/jjb/dmaap/dmaap-csit.yaml
@@ -9,6 +9,6 @@
     functionality:
       - 'mrpubsub':
           trigger_jobs:
-            - '{project-name}-{stream}-merge-java'
+            - '{project-name}-{stream}-release-java-daily-checkstyle'
     robot-options: ''
     branch: 'master'
