--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokia.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-nokia.yaml
@@ -14,7 +14,7 @@
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
-      - '{project-name}-{stream}-{subproject}-release-java-daily'
+      - '{project-name}-{stream}-{subproject}-release-version2-java-daily'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
