--- a/jjb/aaf/aaf-authz-docker.yaml
+++ b/jjb/aaf/aaf-authz-docker.yaml
@@ -4,7 +4,7 @@
     name: aaf-authz-docker
     project-name: 'aaf-authz-docker'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java-checkstyle'
       - '{project-name}-{stream}-merge-properties-java':
          mvn_properties:
