--- a/jjb/aaf/aaf-inno.yaml
+++ b/jjb/aaf/aaf-inno.yaml
@@ -3,7 +3,7 @@
     name: aaf-inno
     project-name: 'aaf-inno'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
