--- a/jjb/aai/aai-aai-service.yaml
+++ b/jjb/aai/aai-aai-service.yaml
@@ -3,7 +3,7 @@
     name: aai-aai-service
     project-name: 'aai-aai-service'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
 
