--- a/jjb/aai/aai-rest-client.yaml
+++ b/jjb/aai/aai-rest-client.yaml
@@ -3,7 +3,7 @@
     name: aai-rest-client
     project-name: 'aai-rest-client'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
