--- a/jjb/aai/aai-router-core-service.yaml
+++ b/jjb/aai/aai-router-core-service.yaml
@@ -3,7 +3,7 @@
     name: aai-router-core
     project-name: 'aai-router-core'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
