--- a/jjb/appc/appc-master.yaml
+++ b/jjb/appc/appc-master.yaml
@@ -3,7 +3,7 @@
     name: appc-master
     project-name: 'appc'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
