--- a/jjb/ccsdk/dashboard.yaml
+++ b/jjb/ccsdk/dashboard.yaml
@@ -3,7 +3,7 @@
     name: ccsdk-dashboard
     project-name: 'ccsdk-dashboard'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
 
