--- a/jjb/ccsdk/parent.yaml
+++ b/jjb/ccsdk/parent.yaml
@@ -3,7 +3,7 @@
     name: ccsdk-parent
     project-name: 'ccsdk-parent'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
