--- a/jjb/ccsdk/storage-pgaas.yaml
+++ b/jjb/ccsdk/storage-pgaas.yaml
@@ -3,7 +3,7 @@
     name: ccsdk-storage-pgaas
     project-name: 'ccsdk-storage-pgaas'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
