--- a/jjb/dmaap/dmaap-messagerouter-docker.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-docker.yaml
@@ -4,7 +4,7 @@
     name: dmaap-messagerouter-docker
     project-name: 'dmaap-messagerouter-docker'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
