--- a/jjb/dmaap/dmaap-messagerouter-mirroragent.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-mirroragent.yaml
@@ -3,7 +3,7 @@
     name: dmaap-messagerouter-mirroragent
     project-name: 'dmaap-messagerouter-mirroragent'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
