--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -1,65 +1,5 @@
 ---
 - job-template:
-    # Template used for running CLM scans
-    # Arguements:
-    #   {name}         - Project Shortname
-    #   {project}      - Fully qualified project name
-    #   {mvn-settings} - Project maven settings file
-    #   {jdk}
-    name: '{project-name}-{stream}-clm'
-
-    project-type: freestyle
-    node: '{build-node}'
-    jdk: '{jdk}'
-
-    properties:
-      - infra-properties:
-          build-days-to-keep: 30
-
-    parameters:
-      - infra-parameters:
-          project: '{project}'
-          branch: '{branch}'
-          refspec: 'refs/heads/{branch}'
-          artifacts: '{archive-artifacts}'
-
-    scm:
-      - git-scm:
-          refspec: ''
-          branch: '{branch}'
-
-    wrappers:
-      - infra-wrappers:
-          build-timeout: '{build-timeout}'
-
-    triggers:
-      - timed: 'H H * * 6'
-
-    builders:
-      - provide-maven-settings:
-          global-settings-file: 'global-settings'
-          settings-file: '{mvn-settings}'
-      - maven-target:
-          maven-version: 'mvn33'
-          pom: 'pom.xml'
-          goals: |
-              clean install dependency:tree com.sonatype.clm:clm-maven-plugin:index
-              {onap-infra-mvn-opts}
-          java-opts:
-            - '-Xmx4096m -XX:MaxPermSize=512m'
-          settings: '{mvn-settings}'
-          settings-type: cfp
-          global-settings: 'global-settings'
-          global-settings-type: cfp
-      - shell: 'find . -regex ".*karaf/target" | xargs rm -rf'
-      - sonatype-clm:
-          application-name: '{project-name}'
-
-    publishers:
-      - infra-shiplogs:
-          maven-version: '{maven-version}'
-
-- job-template:
     # Job template for Java verify jobs
     #
     # The purpose of this job template is to run "maven clean install" for
@@ -68,6 +8,7 @@
     # Required Variables:
     #     branch:    git branch (eg. stable/lithium or master)
 
+      - gerrit-maven-clm
     name: '{project-name}-{stream}-verify-java-skip-tests'
 
     project-type: freestyle
@@ -132,6 +73,7 @@
     # Required Variables:
     #     branch:    git branch (eg. stable/lithium or master)
 
+      - gerrit-maven-clm
     name: '{project-name}-{stream}-verify-java'
 
     project-type: freestyle
@@ -188,12 +130,14 @@
 - job-template:
     # Job template for Java verify jobs running checkstyle at the end
     # When checkstyle will be fully incorporated, it is meant to replace
+      - gerrit-maven-clm
     #  '{project-name}-{stream}-verify-java-checkstyle'
     # The purpose of this job template is to run "maven clean install" for
     # projects using this template.
     #
     # Required Variables:
     #     branch:    git branch (eg. stable/lithium or master)
+      - gerrit-maven-clm
     name: '{project-name}-{stream}-verify-java-checkstyle'
     project-type: freestyle
     concurrent: true
@@ -314,6 +258,7 @@
     #     pattern:   ant file-path pattern relative to the workspace used to
     #                trigger the job
 
+      - gerrit-maven-clm
     name: '{project-name}-{stream}-{subproject}-verify-java'
 
     project-type: freestyle
