--- a/jjb/holmes/holmes-rule-mgt.yaml
+++ b/jjb/holmes/holmes-rule-mgt.yaml
@@ -3,7 +3,7 @@
     name: holmes-rule-management
     project-name: 'holmes-rule-management'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
