--- a/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
+++ b/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
@@ -15,8 +15,8 @@
           pattern: 'nfvparser/**'
           pom: 'nfvparser/pom.xml'
     jobs:
-      - '{project-name}-{stream}-clm'
       - '{project-name}-{stream}-{subproject}-verify-python'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily-no-sonar'
