--- a/jjb/msb/msb-discovery.yaml
+++ b/jjb/msb/msb-discovery.yaml
@@ -3,7 +3,7 @@
     name: msb-discovery
     project-name: 'msb-discovery'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
