--- a/jjb/policy/policy-pap.yaml
+++ b/jjb/policy/policy-pap.yaml
@@ -3,7 +3,7 @@
     name: policy-pap
     project-name: 'policy-pap'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
