--- a/jjb/policy/policy-pdp.yaml
+++ b/jjb/policy/policy-pdp.yaml
@@ -3,7 +3,7 @@
     name: policy-pdp
     project-name: 'policy-pdp'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
