--- a/jjb/sdc/sdc-jtosca.yaml
+++ b/jjb/sdc/sdc-jtosca.yaml
@@ -4,7 +4,7 @@
     name: sdc-jtosca
     project-name: 'sdc-jtosca'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
