--- a/jjb/sdc/sdc-sdc-titan-cassandra.yaml
+++ b/jjb/sdc/sdc-sdc-titan-cassandra.yaml
@@ -4,7 +4,7 @@
     name: sdc-sdc-titan-cassandra
     project-name: 'sdc-sdc-titan-cassandra'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
