--- a/jjb/so/so-libs.yaml
+++ b/jjb/so/so-libs.yaml
@@ -3,7 +3,7 @@
     name: so-libs
     project-name: 'so-libs'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
