--- a/jjb/vnfsdk/vnfsdk-refrepo.yaml
+++ b/jjb/vnfsdk/vnfsdk-refrepo.yaml
@@ -3,7 +3,7 @@
     name: vnfsdk-refrepo
     project-name: 'vnfsdk-refrepo'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
