Move CLM jobs to global jjb
Use CLM job from global-jjb
Remove the local CLM job template

Issue-ID: CIMAN-65
Change-Id: I0660c6b73552d2e29851f3f120c7db2698724141
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/ccsdk/dashboard.yaml
+++ b/jjb/ccsdk/dashboard.yaml
@@ -3,7 +3,8 @@
     name: ccsdk-dashboard
     project-name: 'ccsdk-dashboard'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
 
