--- a/jjb/sdnc/sdnc-core.yaml
+++ b/jjb/sdnc/sdnc-core.yaml
@@ -7,7 +7,8 @@
           pom: 'rootpom/pom.xml'
           pattern: 'rootpom/**'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-java-daily-no-sonar'
