--- a/jjb/aai/aai-babel.yaml
+++ b/jjb/aai/aai-babel.yaml
@@ -3,7 +3,8 @@
     name: aai-babel
     project-name: 'aai-babel'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-java-daily'
