--- a/jjb/aai/aai-champ.yaml
+++ b/jjb/aai/aai-champ.yaml
@@ -3,7 +3,8 @@
     name: aai-champ
     project-name: 'aai-champ'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
