--- a/jjb/aai/aai-esr-server.yaml
+++ b/jjb/aai/aai-esr-server.yaml
@@ -3,7 +3,8 @@
     name: aai-esr-server
     project-name: 'aai-esr-server'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
