--- a/jjb/cli/cli.yaml
+++ b/jjb/cli/cli.yaml
@@ -4,7 +4,8 @@
     name: cli
     project-name: 'cli'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
