--- a/jjb/dmaap/dmaap-messagerouter-dmaapclient.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-dmaapclient.yaml
@@ -3,7 +3,8 @@
     name: dmaap-messagerouter-dmaapclient
     project-name: 'dmaap-messagerouter-dmaapclient'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
