--- a/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
+++ b/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
@@ -15,7 +15,8 @@
           pattern: 'nfvparser/**'
           pom: 'nfvparser/pom.xml'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
