--- a/jjb/msb/msb-java-sdk.yaml
+++ b/jjb/msb/msb-java-sdk.yaml
@@ -3,7 +3,8 @@
     name: msb-java-sdk
     project-name: 'msb-java-sdk'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
