--- a/jjb/policy/policy-api.yaml
+++ b/jjb/policy/policy-api.yaml
@@ -3,7 +3,8 @@
     name: policy-api
     project-name: 'policy-api'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
