Move CLM jobs to global jjb
Use CLM job from global-jjb
Remove the local CLM job template

Issue-ID: CIMAN-65
Change-Id: I0660c6b73552d2e29851f3f120c7db2698724141
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/vnfsdk/vnfsdk-validation.yaml
+++ b/jjb/vnfsdk/vnfsdk-validation.yaml
@@ -3,7 +3,7 @@
     name: vnfsdk-validation
     project-name: 'vnfsdk-validation'
     jobs:
-    - '{project-name}-{stream}-clm'
+    - gerrit-maven-clm
     - '{project-name}-{stream}-verify-java'
     - '{project-name}-{stream}-merge-java'
     - '{project-name}-{stream}-release-version-java-daily'
