Move CLM jobs to global jjb
Use CLM job from global-jjb
Remove the local CLM job template

Issue-ID: CIMAN-65
Change-Id: I0660c6b73552d2e29851f3f120c7db2698724141
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aaf/aaf-authz-docker.yaml
+++ b/jjb/aaf/aaf-authz-docker.yaml
@@ -4,7 +4,8 @@
     name: aaf-authz-docker
     project-name: 'aaf-authz-docker'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: openjdk8
       - '{project-name}-{stream}-verify-java-checkstyle'
       - '{project-name}-{stream}-merge-properties-java':
          mvn_properties:
