--- a/jjb/policy/policy-common.yaml
+++ b/jjb/policy/policy-common.yaml
@@ -3,7 +3,8 @@
     name: policy-common
     project-name: 'policy-common'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: openjdk8
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
