--- a/jjb/aaf/aaf-cadi.yaml
+++ b/jjb/aaf/aaf-cadi.yaml
@@ -3,7 +3,8 @@
     name: aaf-cadi
     project-name: 'aaf-cadi'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: openjdk8
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
