--- a/jjb/aai/aai-logging-service.yaml
+++ b/jjb/aai/aai-logging-service.yaml
@@ -3,7 +3,8 @@
     name: aai-logging-service
     project-name: 'aai-logging-service'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: openjdk8
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
