--- a/jjb/aai/aai-model-loader.yaml
+++ b/jjb/aai/aai-model-loader.yaml
@@ -3,7 +3,8 @@
     name: aai-model-loader
     project-name: 'aai-model-loader'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: openjdk8
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-java-daily'
