--- a/jjb/ccsdk/platform-nbapi.yaml
+++ b/jjb/ccsdk/platform-nbapi.yaml
@@ -3,7 +3,8 @@
     name: ccsdk-platform-nbapi
     project-name: 'ccsdk-platform-nbapi'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: openjdk8
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
