--- a/jjb/sdnc/sdnc-adaptors.yaml
+++ b/jjb/sdnc/sdnc-adaptors.yaml
@@ -3,7 +3,8 @@
     name: sdnc-adaptors
     project-name: 'sdnc-adaptors'
     jobs:
-      - '{project-name}-{stream}-clm'
+      - gerrit-maven-clm:
+          java-version: openjdk8
       - '{project-name}-{stream}-verify-java-skip-tests'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
