Add version3-java-daily for vfc-resmanagement
Add version3-java-daily for vfc-resmanagement to build
release version 1.0.0

Change-Id: Ibf069dbb387e0c9394e092446c41d7e678d15228
Issue-Id:VFC-506
Signed-off-by: luxin <luxin7@huawei.com>

--- a/jjb/vfc/vfc-nfvo-resmanagement.yaml
+++ b/jjb/vfc/vfc-nfvo-resmanagement.yaml
@@ -9,10 +9,15 @@
       - 'master':
           branch: 'master'
     build-node: ubuntu1604-basebuild-4c-4g
+    subproject: 
+      - 'deployment':
+          pom: 'ResmanagementService/deployment/pom.xml'
+          pattern: 'ResmanagementService/deployment/**'
     jobs:
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-{subproject}-release-version3-java-daily'
       - '{project-name}-{stream}-docker-java-version-shell-daily':
           docker-pom: 'pom.xml'
           mvn-goals: 'install'
