Update vfc-nfvo-driver-svnfm-huawei yaml template
Update the pom file directory,because –release-version3-java-daily
job failed.
Remove extra space.

Issue-ID: VFC-520
Change-Id: I02e0129f5e938cccb4b56d11b29ff8fd00c98d7f
Signed-off-by: yangyan <yangyanyj@chinamobile.com>

--- a/jjb/vfc/vfc-nfvo-driver-svnfm-huawei.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-svnfm-huawei.yaml
@@ -9,8 +9,8 @@
     mvn-settings: 'vfc-nfvo-driver-vnfm-svnfm-settings'
     subproject:
       - 'drv-vnfm-huawei':
-          pom: 'huawei/vnfmadapter/pom.xml'
-          pattern: 'huawei/vnfmadapter/**'
+          pom: 'huawei/pom.xml'
+          pattern: 'huawei/**'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
