Refactor integration java jobs
Remove root level java job; replace with subproject
jobs instead.

Change-Id: I94daecaa70c667be2462e789bd62253f8fac3bdc
Issue-ID: INT-273
Signed-off-by: Gary Wu <gary.i.wu@huawei.com>

--- a/jjb/integration/integration.yaml
+++ b/jjb/integration/integration.yaml
@@ -3,10 +3,14 @@
     name: integration
     project-name: 'integration'
     jobs:
-      - '{project-name}-{stream}-verify-java'
-      - '{project-name}-{stream}-merge-java'
-      - '{project-name}-{stream}-release-version-java-daily'
+      - '{project-name}-{stream}-{subproject}-verify-java'
+      - '{project-name}-{stream}-{subproject}-merge-java'
+      - '{project-name}-{stream}-{subproject}-release-version-java-daily'
     project: 'integration'
+    subproject:
+      - 'version-manifest':
+          pom: 'version-manifest/pom.xml'
+          pattern: 'version-manifest/**'
     stream:
       - 'master':
           branch: 'master'
