Add {subproject}-docker-java-version job
Issue-Id: VFC-509

Change-Id: I3c9c8ba8b461d5fe35c79d1187ffdb7190c20700
Signed-off-by: Zhaoxing <meng.zhaoxing1@zte.com.cn>

--- a/jjb/vfc/vfc-nfvo-wfengine-java.yaml
+++ b/jjb/vfc/vfc-nfvo-wfengine-java.yaml
@@ -19,11 +19,10 @@
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily'
-      - '{project-name}-{stream}-docker-java-version-shell-daily':
-          docker-pom: 'pom.xml'
-          mvn-goals: 'install'
+      - '{project-name}-{stream}-{subproject}-docker-java-version-shell-daily':
+          mvn-goals: 'clean'
           script:
-            !include-raw-escape: 'build-nfvo-wfengine-docker-image.sh'
+            !include-raw-escape: 'build-nfvo-wfengine-{subproject}-docker-image.sh'
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-basebuild-4c-4g
