Add java-version for CLM projects
Add java-version parameter just for CLM jobs to
avoid other jobs from breaking by picking the wrong
configuration.

Issue-ID: CIMAN-65
Change-Id: Ia70e807cc581d63296ef59320ef18e079b63c17d
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/ccsdk/platform-nbapi.yaml
+++ b/jjb/ccsdk/platform-nbapi.yaml
@@ -3,7 +3,8 @@
     name: ccsdk-platform-nbapi
     project-name: 'ccsdk-platform-nbapi'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
