--- a/jjb/dmaap/dmaap-messagerouter-docker.yaml
+++ b/jjb/dmaap/dmaap-messagerouter-docker.yaml
@@ -4,7 +4,8 @@
     name: dmaap-messagerouter-docker
     project-name: 'dmaap-messagerouter-docker'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
