--- a/jjb/aaf/aaf-inno.yaml
+++ b/jjb/aaf/aaf-inno.yaml
@@ -3,7 +3,8 @@
     name: aaf-inno
     project-name: 'aaf-inno'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
