--- a/jjb/aai/aai-rest-client.yaml
+++ b/jjb/aai/aai-rest-client.yaml
@@ -3,7 +3,8 @@
     name: aai-rest-client
     project-name: 'aai-rest-client'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
