--- a/jjb/appc/appc-deployment.yaml
+++ b/jjb/appc/appc-deployment.yaml
@@ -4,7 +4,8 @@
     name: appc-deployment
     project-name: 'appc-deployment'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
