--- a/jjb/ccsdk/dashboard.yaml
+++ b/jjb/ccsdk/dashboard.yaml
@@ -3,7 +3,8 @@
     name: ccsdk-dashboard
     project-name: 'ccsdk-dashboard'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
 
