--- a/jjb/ccsdk/sli-northbound.yaml
+++ b/jjb/ccsdk/sli-northbound.yaml
@@ -3,7 +3,8 @@
     name: ccsdk-sli-northbound
     project-name: 'ccsdk-sli-northbound'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
