--- a/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
+++ b/jjb/modeling/modeling-toscaparsers-nfvparser.yaml
@@ -16,7 +16,8 @@
           pom: 'nfvparser/pom.xml'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-version-java-daily-no-sonar'
