--- a/jjb/policy/policy-engine.yaml
+++ b/jjb/policy/policy-engine.yaml
@@ -3,7 +3,8 @@
     name: policy-engine
     project-name: 'policy-engine'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily':
