--- a/jjb/sdc/sdc-sdc-titan-cassandra.yaml
+++ b/jjb/sdc/sdc-sdc-titan-cassandra.yaml
@@ -4,7 +4,8 @@
     name: sdc-sdc-titan-cassandra
     project-name: 'sdc-sdc-titan-cassandra'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-merge-java'
