--- a/jjb/sdnc/sdnc-oam.yaml
+++ b/jjb/sdnc/sdnc-oam.yaml
@@ -4,7 +4,8 @@
     name: sdnc-oam
     project-name: 'sdnc-oam'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily-no-sonar'
