--- a/jjb/so/so-libs.yaml
+++ b/jjb/so/so-libs.yaml
@@ -3,7 +3,8 @@
     name: so-libs
     project-name: 'so-libs'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
