--- a/jjb/ui/ui-dmaapbc.yaml
+++ b/jjb/ui/ui-dmaapbc.yaml
@@ -4,7 +4,8 @@
     project-name: 'ui-dmaapbc'
 
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
