--- a/jjb/vid/vid-asdcclient.yaml
+++ b/jjb/vid/vid-asdcclient.yaml
@@ -3,7 +3,8 @@
     name: vid-asdcclient
     project-name: 'vid-asdcclient'
     jobs:
-      - gerrit-maven-clm
+      - gerrit-maven-clm:
+          java-version: ''
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
