Add step for version to docker java properties
Add an optional step to use maven version plugin

Issue-ID: CLAMP-57

Change-Id: I1d71183b98ae37c7e519b0e2c41c76c647b2e3f6
Signed-off-by: JulienBe <jb379x@att.com>

--- a/jjb/clamp/clamp.yaml
+++ b/jjb/clamp/clamp.yaml
@@ -16,6 +16,7 @@
           - skipDockerTag=true
           - skipDockerPush=true
       - '{project-name}-{stream}-docker-java-properties-daily':
+         setVersion: 'DoSetVersion'
          docker-pom: 'pom.xml'
          mvn-profile: 'docker'
          maven-properties: |
