--- a/jjb/aaf/aaf-authz-docker.yaml
+++ b/jjb/aaf/aaf-authz-docker.yaml
@@ -18,6 +18,7 @@
           - skipDockerTag=true
           - skipDockerPush=true
       - '{project-name}-{stream}-docker-java-properties-daily':
+         setVersion: 'DontSetVersion'
          docker-pom: 'authz-service/pom.xml'
          mvn-profile: 'docker'
          maven-properties: |
