Correct job template for docker image processing
Add CSIT job template

Change-Id: I920d296ffa123f2fdae503612bfd9d83d589e05f
Issue-Id: MODELING-26
Signed-off-by: Serban Jora <jora@research.att.com>

--- a/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
+++ b/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
@@ -17,3 +17,10 @@
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-java-daily'
+      - '{project-name}-{stream}-docker-java-properties-daily':
+         docker-pom: 'pom.xml'
+         mvn-profile: 'docker'
+         maven-properties: |
+          skip.docker.build=false
+          skip.docker.tag=false
+          skip.docker.push=false
