Add missing parameter for docker java job
Add missing setVersion parameter which is needed by
{project-name}-{stream}-docker-java-properties-daily
job template.

Change-Id: Ie4acb1b363b2613eb9f7ec5b9f210acdbeff8c77
Issue-Id: MODELING-26
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
+++ b/jjb/modeling/modeling-toscaparsers-javatoscachecker.yaml
@@ -18,6 +18,7 @@
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-java-daily'
       - '{project-name}-{stream}-docker-java-properties-daily':
+         setVersion: 'DontSetVersion'
          docker-pom: 'pom.xml'
          mvn-profile: 'docker'
          maven-properties: |
