Migrate portal-sdk to use global-jjb
Add gerrit-maven-jobs group to
portal-sdk

ISSUE-ID: CIMAN-114
Change-Id: Ic01d2fc35ace4ac8219d4036077b4549ae0f9857
Signed-off-by: Jeremy Phelps <jphelps@linuxfoundation.org>

--- a/jjb/portal/portal-sdk.yaml
+++ b/jjb/portal/portal-sdk.yaml
@@ -7,11 +7,12 @@
           pom: 'ecomp-sdk/pom.xml'
           pattern: 'ecomp-sdk/**'
     subproject-name: 'ecomp-sdk'
-
+    cron: 'H 11 * * *'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-java'
       - '{project-name}-{stream}-{subproject}-merge-java'
       - '{project-name}-{stream}-{subproject}-release-java-daily'
+      - '{project-name}-gerrit-maven-jobs'
       - '{project-name}-{stream}-stage-site-java':
           pom: 'ecomp-sdk/pom.xml'
           site-pom: 'ecomp-sdk/pom.xml'
